--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marketing Campaign Planner</title>
-  <script src="https://github.com/jmscaustin1991/marketingcampaignplanner/blob/dff44b90b25e047089a64ad34ab8c04cf2a55933/script.js"></script>
+  <script src="script.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <link rel="stylesheet" href="https://github.com/jmscaustin1991/marketingcampaignplanner/blob/dff44b90b25e047089a64ad34ab8c04cf2a55933/style.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
   <div class="min-h-screen flex flex-col">
